traces/bug_883.txt
examples++-load/iovtk.cpp:3622: error: DEAD_STORE
  The value written to &cell_lab (type int) is never used.
Showing all 1 steps of the trace


examples++-load/iovtk.cpp:3622:3: Write of unused value
3620.     fprintf(fp, "CELL_DATA %d\n", numElements);
3621.     int cell_fd=1;
3622.     int cell_lab=1;
          ^
3623.     fprintf(fp, "Scalars  Label int%d\n", cell_fd);
3624.     fprintf(fp, "LOOKUP_TABLE FreeFempp_table\n"); 
